src/objects/DecompositionSequence__mdt.object
<CustomObject>
    <fields>
        <fullName>ChangeType__c</fullName>
        <label>ChangeType</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExecutionSequence__c</fullName>
        <label>ExecutionSequence</label>
        <precision>11</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GroupByCriteria__c</fullName>
        <label>GroupByCriteria</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>All Together</fullName>
                    <default>true</default>
                    <label>All Together</label>
                </value>
                <value>
                    <fullName>Child Different from Parent</fullName>
                </value>
                <value>
                    <fullName>Group by Post Code wild character</fullName>
                </value>
                <value>
                    <fullName>Group by Site</fullName>
                </value>
                <value>
                    <fullName>Group by WishDate</fullName>
                </value>
                <value>
                    <fullName>Group with Depends On</fullName>
                </value>
                <value>
                    <fullName>No Grouping</fullName>
                </value>
                <value>
                    <fullName>Override</fullName>
                </value>
                <value>
                    <fullName>ReGroup with Running Service</fullName>
                </value>
                <value>
                    <fullName>groupwithFromLink</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GroupKey__c</fullName>
        <label>GroupKey</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OverrideDecompostionCriteria__c</fullName>
        <label>OverrideDecompostionCriteria</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ServiceDecompositionCriteria__c</fullName>
        <label>ServiceDecompositionCriteria</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>DecompositionSequence</label>
    <pluralLabel>DecompositionSequences</pluralLabel>
</CustomObject>